# NORAB106_mlx90632

./: CMakeLists.txt  LICENSE  Readme.md  prj.conf  ubx_evknorab10_nrf5340_cpuapp_ns.overlay
inc/: common.h  gpio_abstract.h  gpio_dt.h  gpio_hal.h  i2c_comm.h  i2c_dt.h  peripheral.h
inc/melexis/: mlx90632.h  mlx90632_drv.h  mlx90632_extended_meas.h
sensor_fb/: melexis,mlx90632.yaml
src/: main.c
src/melexis/: mlx90632.c  mlx90632_drv.c  mlx90632_hal.c
src/peripheral/: gpio_abstract.c  gpio_hal.c  i2c_comm.c  peripheral.c
